# libft

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  ft_strsplit.c
includes/: ft_printf.h  libft.h
src/: ft_atoi.c  ft_bzero.c  ft_intcount.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_long_atoi.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrev.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+27 more)
src/ft_printf/: fd_printf.c  flag_parsing2.c  ft_printf.c  itoa_base_s.c  itoa_base_u.c  make_flags.c  make_s_c.c  precision.c  processing.c  run_big_c.c  run_big_s.c  start_processing.c  struct_management.c  trees.c  width.c  width_for_chr.c
